[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "leftdefault"
authors = [
    {name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"},
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"},
]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ntessore/leftdefault"
Issues = "https://github.com/ntessore/leftdefault/issues"

[tool.flit.sdist]
exclude = [".*"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["ALL"]
ignore = [
  # flake8-annotations (ANN)
  "ANN101",  # missing type annotation for self
  # pydocstyle (D)
  "D203",  # one-blank-line-before-class  # contra numpydoc
  "D213",  # multi-line-summary-second-line
  # flake8-commas (COM)
  "COM812",  # TrailingCommaMissing
]
